# small-observations

./: .gitignore  .htmltest.yml  CLAUDE.md  Makefile  README.md  hugo.toml  pa11y.json  pyproject.toml
.githooks/: commit-msg
assets/css/: site.css
content/: 404.md  _index.md  colophon.md
content/artists/: _index.md
content/cities/: _index.md
content/countries/: _index.md
content/posts/: 2005-09-02.md  2010-06-03-brighton.md  2015-10-12-greater-london.md  2016-04-15-dublin.md  2016-05-04-berlin.md  2016-08-30-greater-london.md  2016-09-14-new-york.md  2016-11-05-greater-london-2.md  2016-11-05-greater-london.md  2016-11-19-greater-london.md  2017-04-22-greater-london.md  2017-06-26-greater-london.md  2017-08-04-greater-london.md  2017-08-06-greater-london.md  2017-09-20-greater-london.md  2018-07-14-marais-stencil-dog.md  2018-11-24-san-francisco-2.md  2018-11-24-san-francisco-3.md  2018-11-24-san-francisco-4.md  2018-11-24-san-francisco.md  2020-07-28.md  (+96 more)
docs/: 2026-05-23-site-audit-findings.md  alt-text-draft.md
ingest/: README.md  __main__.py  exif.py  frontmatter.py  geocode.py  pipeline.py  resize.py  slug.py
layouts/: index.html
mockups/: index-lean.html  index.html
scripts/: audit_descriptions.py  audit_slugs.py  check_feed_sitemap.py  check_photo_alt.py  check_post_frontmatter.py  check_rendered_metadata.py
tests/: conftest.py  test_check_feed_sitemap.py  test_check_photo_alt.py  test_check_post_frontmatter.py  test_check_rendered_metadata.py  test_exif.py  test_frontmatter.py  test_geocode.py  test_pipeline.py  test_resize.py  test_slug.py
(+234 files in other folders)
