[project]
name = "small-observations-ingest"
version = "0.1.0"
description = "One-shot ingest pipeline for Small Observations photos."
requires-python = ">=3.10"
dependencies = [
  "Pillow>=10.0",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "piexif>=1.1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-q"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["ingest*"]
exclude = ["tests*"]
